# pdvu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE-3RD-PARTY.txt  README.md
.github/workflows/: ci.yml
benchmark/: actions.py  auto_script.py  benchmarks.md  graphs.py  json_parser.py  memory_tracker.py
src/: CMakeLists.txt  keys.h  kitty.cpp  kitty.h  kitty_internal.h  main.cpp  parser.cpp  parser.h  ram_usage.h  render_engine.cpp  render_engine.h  renderer.cpp  renderer.h  shm.cpp  shm.h  tempfile.cpp  tempfile.h  terminal.cpp  terminal.h  threadpool.cpp  threadpool.h  tui.cpp  tui.h  viewer.cpp  viewer.h
src/render/: parser.cpp  render_engine.cpp  render_engine.h  threadpool.cpp
src/terminal/: kitty.cpp  kitty.h  terminal.h  tui.cpp  tui.h
src/utils/: logging.h  lru_cache.h  profiling.h  ram_usage.h  shm.cpp  shm.h  tempfile.cpp  tempfile.h
src/viewer/: pageview.cpp  pageview.h  viewer.cpp  viewer.h
tests/: CMakeLists.txt  test_kitty.cpp  test_lru_cache.cpp  test_parser_PageSpecs.cpp  test_shm.cpp  test_tempfile.cpp  test_threadpool.cpp
tests/render/: test_parser_PageSpecs.cpp  test_threadpool.cpp
tests/terminal/: test_kitty.cpp
tests/utils/: test_shm.cpp
tests/viewer/: test_pageview.cpp
